# Alg-And-DS-2022-Spring

./: .gitignore  1.cpp  1_2.cpp  1_4.cpp  2_4.cpp  3_1.cpp  4_1.cpp  5_4.cpp  6_2.cpp  7_3.cpp  CMakeLists.txt  Makefile  README.md  rk-1.cpp  rk-2.cpp  rk-3.cpp  run_linters.sh
.github/workflows/: ci.yml
1_2/: 1_2.cpp
2/: 2.cpp
2_3/: 2_3.cpp
3/: 3.cpp
4_1/: 4_1.cpp
graphs/: CMakeLists.txt  Makefile  run_linters.sh
graphs/include/: ArcGraph.h  IGraph.h  ListGraph.h  MatrixGraph.h  SetGraph.h
graphs/src/: ArcGraph.cpp  ListGraph.cpp  MatrixGraph.cpp  SetGraph.cpp
graphs/tests/: test.cpp
haffman/: Huffman.cpp  Huffman.h
